--- a/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
+++ b/src/BusinessEvents.Sdk/Nexus.Link.BusinessEvents.Sdk.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.6.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.8.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.12.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.BusinessEvents.Sdk</PackageId>
-    <Version>2.0.17</Version>
+    <Version>2.0.18</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,6 +23,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.0.18 Bump
       2.0.17 Fix: PackageProjectUrl for this nuget package
       2.0.16 Bump
       2.0.0 Support refactored Authentication
