--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.6.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.8.1" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.12.0" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.0.19</Version>
+      <Version>2.0.20</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,6 +37,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.0.20 Bump
         2.0.19 Fix: PackageProjectUrl for this nuget package
         2.0.18 Bump
         2.0.13 CacheKey now includes serviceName to support virutal services (logging).
