--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="[2.1.1,3.0)" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.19" />
-    <PackageReference Include="Nexus.Link.Services.Contracts" Version="3.2.7" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.1.20" />
+    <PackageReference Include="Nexus.Link.Services.Contracts" Version="3.2.8" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,7 +21,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>3.2.5</Version>
+    <Version>3.2.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -31,6 +31,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.2.6 Added dependency injection of IValueTranslator.
       3.2.5 Bump
       3.2.4 Added ValueTranslationCapability.
       3.1.2 Bump
