--- a/test/Services.Controllers.UnitTests/Services.Controllers.UnitTests.csproj
+++ b/test/Services.Controllers.UnitTests/Services.Controllers.UnitTests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Services.Controllers\Services.Controllers.csproj" />
+  </ItemGroup>
+
 </Project>
