--- a/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
+++ b/src/KeyTranslator.Sdk/Keytranslator.Sdk.csproj
@@ -26,7 +26,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.KeyTranslator.Sdk</PackageId>
-    <Version>2.0.23</Version>
+    <Version>3.0.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -36,6 +36,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.0.0 Moved ValueOrLockId to Libraries.Core.
       2.0.23 Bump
       2.0.17 Fix: PackageProjectUrl for this nuget package
       2.0.16 Bump
