Services.Contracts: 2.3.2 Corrected wrong order of paramter. More descriptive name for parameters. Added XML documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,5 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 /Nexus.Link.Sdks.v3.ncrunchsolution
+/src/Services.Contracts/Nexus.Link.Services.Contracts.xml
+/src/Services.Controllers/Nexus.Link.Services.Controllers.xml
