--- a/src/Services.Implementations/Services.Implementations.csproj
+++ b/src/Services.Implementations/Services.Implementations.csproj
@@ -21,7 +21,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Implementations</PackageId>
-    <Version>3.3.0</Version>
+    <Version>3.3.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -31,6 +31,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.3.1 Added documentation XML
       3.3.0 Added ValueTranslationCapability
       3.2.11 Bump
       3.2.6 Added dependency injection of IValueTranslator.
@@ -83,7 +84,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Git\Xlent.Lever\Nexus.Link.Sdks\src\Services.Implementations\Nexus.Link.Services.Implementations.xml</DocumentationFile>
+    <DocumentationFile>Nexus.Link.Services.Implementations.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
