--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.5.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.7.0" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.16.0-beta2-en" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.0.12</Version>
+      <Version>2.1.0</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,6 +37,7 @@
       <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.0 LeverServiceConfiguration.GetConfigurationForAsync now acts differently if tenant is ServiceTenant
         2.0.12 Bump
         2.0.0 Support refactored Authentication
         1.1.21 Bump
