--- a/src/Logger.Sdk/Logger.Sdk.csproj
+++ b/src/Logger.Sdk/Logger.Sdk.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Azure" Version="2.0.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.7.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.16.0-beta2-en" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +19,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Logger.Sdk</PackageId>
-    <Version>2.1.15</Version>
+    <Version>2.2.0-beta1-en</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -28,6 +28,7 @@
     <Description>SDK for Nexus logging service (only for internal use).</Description>
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <PackageReleaseNotes>
+      2.2.0  Added constructor overload which can initialize using a LoggingConfiguration
       2.1.15 Bump
       2.1.13 Cleanup references
       2.1.12 Add LoggingServiceConfiguration for FulcrumLogger
