--- a/test/Commands.Sdk.UnitTests/Commands.Sdk.UnitTests.csproj
+++ b/test/Commands.Sdk.UnitTests/Commands.Sdk.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="Nexus.Link.DatabasePatcher" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net472'">
@@ -23,6 +24,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Commands.Sdk\Commands.Sdk.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="scripts\patches\readme.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
