Features/ac disptacher (#2)
* AC SDK: 2.1.0 Support for priority queues

* Fix: SetPriority in IAsyncCall interface

* AC SDK 2.1.2-alpha: Fix: Added CreateCall methods to interface

* Configurations SDK: 2.1.0 Support for complex types in LeverConfiguration.Value() and LeverConfiguration.MandatoryValue()

* 2.2.0-beta01-mw

* Moved Common, Data, Storage, Storage.Azure, Storage.Memory from AC here

* AC SDK: Handle lever configuration

* When "Put back last in queue", write the queue name as well

* Made GetQueueNameForDistributionVersion2 public

* Fix: Can't use Exception.StackTrrace as "data" in LogError

* GetDefaultDeadlineTimeSpanAsync => GetDefaultDeadlineTimeSpan

* config.Value<int?>("DistributionVersion") == 2

* AC SDK: 2.2.0-alpha10-mw (removed DistributionVersion

* AC SDK; Fix: Potential memory leak if we do not dispose MemoryStream

* AC SDK; Consolidated Xlent.Lever.AsyncCaller.Data.Models.RawRequest (the one to use) and Nexus.Link.AsyncCaller.Sdk.RestClients.Facade.Models.RawRequest (made obsolete)

* Comments on ConfigurationHelper

* AC SDK; Removed unused code

* AC SDK; Consolidated Nexus.Link.AsyncCaller.Common.Models.IHttpMessageSerializerAsync (the one to use) and Nexus.Link.AsyncCaller.Sdk.Helpers.IHttpMessageSerializerAsync (made obsolete)

* PriorityQueueNameInterfix => MultipleQueueNameInterfix

* AC SDK:
- Fixed namespace
- Deprecated some classes
- Removed some classes
- Renamed Nexus.Link.AsyncCaller.Sdk.Data.Models.RequestEnvelope to RawRequestEnvelope
- "From/To DataAsync" => "From/To RawAsync"
-

* AC SDK: Fix: MemoryQueue (dev support)

* Added ToString to MemoryQueue for easier debugging

* MemoryQueue: More debug info

* Preparing for merge to master (removing "beta" and "alpha" versions suffixes)

* Nexus.Link.Configurations.Sdk should be at version 2.1.0

--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -27,16 +27,17 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.0.25</Version>
+      <Version>2.1.0</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
       <PackageProjectUrl>https://github.com/nexus-link/Nexus.Link.Sdks</PackageProjectUrl>
       <PackageLanguage>en-US</PackageLanguage>
       <Description>Configurations library to support features in the Nexus Link concept</Description>
-      <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
+      <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.0 Support for complex types in LeverConfiguration.Value() and LeverConfiguration.MandatoryValue()
         2.0.25 Bump
         2.0.19 Fix: PackageProjectUrl for this nuget package
         2.0.18 Bump
