--- a/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
+++ b/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
@@ -8,22 +8,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.14" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.14.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.18" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.15.2" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Configurations.Sdk\Configurations.Sdk.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncCaller.Sdk</PackageId>
-    <Version>2.0.23</Version>
+    <Version>2.1.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
     <PackageProjectUrl>https://github.com/nexus-link/Nexus.Link.Sdks</PackageProjectUrl>
     <PackageLanguage>en-US</PackageLanguage>
     <Description>SDK for Nexus async caller service.</Description>
-    <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
+    <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.1.0 Support for Async Caller Dispatching in Azure functions and for multiple queues
       2.0.23 Bump
       2.0.17 Fix: PackageProjectUrl for this nuget package
       2.0.16 Bump
