--- a/src/Configurations.Sdk/Configurations.Sdk.csproj
+++ b/src/Configurations.Sdk/Configurations.Sdk.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.14" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.14.1" /> 
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.10.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.15.4" /> 
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
@@ -27,7 +27,7 @@
 
     <PropertyGroup>
       <PackageId>Nexus.Link.Configurations.Sdk</PackageId>
-      <Version>2.1.0</Version>
+      <Version>2.1.1</Version>
       <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <PackageTags>nexus;link;fulcrum;lever</PackageTags>
       <Authors>XLENT Link</Authors>
@@ -37,6 +37,7 @@
       <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
       <IncludeSymbols>true</IncludeSymbols>
       <PackageReleaseNotes>
+        2.1.1 Bump
         2.1.0 Support for complex types in LeverConfiguration.Value() and LeverConfiguration.MandatoryValue()
         2.0.25 Bump
         2.0.19 Fix: PackageProjectUrl for this nuget package
