--- a/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
+++ b/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.9.14" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.10.2" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.DatasyncEngine.Sdk</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,6 +23,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageReleaseNotes>
+      1.0.2 First release
       1.0.1 First release
     </PackageReleaseNotes>
   </PropertyGroup>
