--- a/src/Services.Contracts/Services.Contracts.csproj
+++ b/src/Services.Contracts/Services.Contracts.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Contracts</PackageId>
-    <Version>3.4.0</Version>
+    <Version>3.4.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -18,6 +18,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.4.1 Bump
       3.4.0 Support for Value Translator Concept service
       3.3.1 Added documentation XML
       3.3.0 Added ValueTranslationCapability
@@ -53,8 +54,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.14.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="2.3.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.15.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="2.3.6" />
   </ItemGroup>
 
 </Project>
