--- a/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
+++ b/src/AsyncCaller.Sdk/Nexus.Link.AsyncCaller.Sdk.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.10.2" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.15.4" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.20.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
@@ -19,7 +19,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncCaller.Sdk</PackageId>
-    <Version>2.1.5</Version>
+    <Version>2.1.6</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -29,6 +29,7 @@
     <Copyright>Copyright ©2020 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.1.6 Fix for Content-Type in Callback request (it's always application/json, not the content-type from the server response)
       2.1.5 Fix for dotnet core regarding HTTP header "Expires: -1"
       2.1.4 Compensate for bug in dotnet core regarding commas in Server header not allowed
       2.1.3 Azure storage queue doesn't accept InitialVisibilityDelay &gt;= 7 days
