--- a/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
+++ b/test/AsyncCaller.UnitTests/AsyncCaller.Sdk.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="4.20.1" />
   </ItemGroup>
 
   <ItemGroup>
