--- a/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
+++ b/src/DataSyncEngine.Sdk/Nexus.Link.DataSyncEngine.Sdk.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.DatasyncEngine.Sdk</PackageId>
-    <Version>1.0.3</Version>
+    <Version>2.0.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -23,7 +23,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageReleaseNotes>
-      1.0.3 Bump
+      2.0.0 Added CancellationToken where missing.
       1.0.2 First release
       1.0.1 First release
     </PackageReleaseNotes>
