--- a/src/Services.Controllers/Services.Controllers.csproj
+++ b/src/Services.Controllers/Services.Controllers.csproj
@@ -4,11 +4,22 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Nexus.Link.Services.Controllers</RootNamespace>
     <AssemblyName>Nexus.Link.Services.Controllers</AssemblyName>
+
+    <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+
+    <!-- Embed source files that are not tracked by the source control manager in the PDB -->
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+    <!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
+    <DebugType>embedded</DebugType>
+    <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.25.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud.AspNet" Version="2.6.2" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.27.1" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud.AspNet" Version="2.6.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,7 +28,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Controllers</PackageId>
-    <Version>2.4.3</Version>
+    <Version>2.4.4</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -27,6 +38,7 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      2.4.4 Symbols
       2.4.3 Bump
       2.4.0 Support for Value Translator Concept service
       2.3.2 Corrected wrong order of paramter. More descriptive name for parameters. Added XML documentation.
