--- a/src/Authentication.AspNet.Sdk/azure-pipelines.yml
+++ b/src/Authentication.AspNet.Sdk/azure-pipelines.yml
@@ -24,3 +24,4 @@ jobs:
     nugetProjectsPath: '**/src/Authentication.AspNet.Sdk/*.csproj'
     nuGetFeedType: external
     publishFeedCredentials: 'prd-nexus-nuget-external'
+    publishVstsFeed: 'Nexus Libs/nexus-nugets'
