--- a/src/DataSyncEngine.Sdk/azure-pipelines.yml
+++ b/src/DataSyncEngine.Sdk/azure-pipelines.yml
@@ -23,3 +23,4 @@ jobs:
     nugetProjectsPath: '**/src/DataSyncEngine.Sdk/*.csproj'
     nuGetFeedType: external
     publishFeedCredentials: 'prd-nexus-nuget-external'
+    publishVstsFeed: 'Nexus Libs/nexus-nugets'
