--- a/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
+++ b/src/IdentityAccessManagement.Sdk/IdentityAccessManagement.Sdk.csproj
@@ -1,53 +1,55 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 
-    <!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<!-- Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 
-    <!-- Embed source files that are not tracked by the source control manager in the PDB -->
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<!-- Embed source files that are not tracked by the source control manager in the PDB -->
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 
-    <!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
-    <DebugType>embedded</DebugType>
-    <IncludeSymbols>true</IncludeSymbols>
-  </PropertyGroup>
+		<!-- Recommended: Embed symbols containing Source Link in the main file (exe/dll) -->
+		<DebugType>embedded</DebugType>
+		<IncludeSymbols>true</IncludeSymbols>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>full</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DebugType>full</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.20" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.18.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="IdentityModel" Version="5.1.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.5.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.20" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.19" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Web" Version="2.18.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+		<PackageReference Include="IdentityModel" Version="5.1.0" />
+		<PackageReference Include="Nexus.Link.Libraries.Core" Version="5.5.2" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <PackageId>Nexus.Link.IdentityAccessManagement.Sdk</PackageId>
-    <Version>0.3.0</Version>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>nexus;link</PackageTags>
-    <Authors>XLENT Link</Authors>
-    <PackageProjectUrl>https://github.com/nexus-link/Nexus.Link.Sdks</PackageProjectUrl>
-    <PackageLanguage>en-US</PackageLanguage>
-    <Description>Authentication library to support features in the Nexus Link concept</Description>
-    <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
-    <IncludeSymbols>true</IncludeSymbols>
-    <PackageReleaseNotes>
-      0.3.0 azure-pipelines.yml
-      0.2.0 Added TokenRefresher
-      0.1.0 Initial release
-    </PackageReleaseNotes>
-  </PropertyGroup>
+	<PropertyGroup>
+		<PackageId>Nexus.Link.IdentityAccessManagement.Sdk</PackageId>
+		<Version>0.4.0</Version>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+		<PackageTags>nexus;link</PackageTags>
+		<Authors>XLENT Link</Authors>
+		<PackageProjectUrl>https://github.com/nexus-link/Nexus.Link.Sdks</PackageProjectUrl>
+		<PackageLanguage>en-US</PackageLanguage>
+		<Description>Authentication library to support features in the Nexus Link concept</Description>
+		<Copyright>Copyright ©2021 Xlent Link AB</Copyright>
+		<IncludeSymbols>true</IncludeSymbols>
+		<PackageReleaseNotes>
+			0.4.0 Added ScopeRequirementAttribute. Audience is no longer required in startup extension. Claim names sorted out.
+			0.3.0 azure-pipelines.yml
+			0.2.0 Added TokenRefresher
+			0.1.0 Initial release
+		</PackageReleaseNotes>
+	</PropertyGroup>
 
 </Project>
