Test suite for workflow sql "complete" with update and raw sql tests where applicable

--- a/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
+++ b/src/WorkflowEngine.Sdk.Persistence.Sql/WorkflowEngine.Sdk.Persistence.Sql.csproj
@@ -34,7 +34,7 @@
     <None Update="WorkflowEngine\sql-scripts\patches\patch01 - initial configuration tables.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="WorkflowEngine\sql-scripts\patches\patch02 - initial runtime tables - Copy.sql">
+    <None Update="WorkflowEngine\sql-scripts\patches\patch02 - initial runtime tables.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="WorkflowEngine\sql-scripts\patches\patch02_rollback.sql">
