--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -23,8 +23,8 @@
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.7.1" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.8.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.21.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.3" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.22.0-alfa01" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="2.29.4-alfa01" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,7 +38,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>1.6.0-rc01</Version>
+    <Version>1.7.0-alfa01</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -48,7 +48,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-	    1.6.0 Support for Cancel workflow
+      1.7.0 Added RequestPostponedException.TryAgain
+      1.6.0 Support for Cancel workflow
       1.5.0 Service contract changes, mostly removing child things
       1.4.0 Added error handling
       1.3.0 Implemented WorkflowService and WorkflowAdministrationService
