--- a/test/WorkflowEngine.Sdk.UnitTests.Abstract/WorkflowEngine.Sdk.UnitTests.Abstract.csproj
+++ b/test/WorkflowEngine.Sdk.UnitTests.Abstract/WorkflowEngine.Sdk.UnitTests.Abstract.csproj
@@ -17,7 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.9-rc01" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowMgmt.Abstract" Version="1.0.11-alfa01" />
   </ItemGroup>
 
   <ItemGroup>
