--- a/src/Services.Contracts/Services.Contracts.csproj
+++ b/src/Services.Contracts/Services.Contracts.csproj
@@ -19,12 +19,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.7.1" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.5.1" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageId>Nexus.Link.Services.Contracts</PackageId>
-    <Version>3.4.4</Version>
+    <Version>3.4.5</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -34,7 +34,8 @@
     <Copyright>Copyright ©2019 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      3.4. Symbols
+      3.4.5 Bump
+      3.4.4 Symbols
       3.4.3 Bump
       3.4.0 Support for Value Translator Concept service
       3.3.1 Added documentation XML
